...
                            app:layout_constraintBottom_toTopOf="@+id/user_password_layout"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/user_name"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="16dp"
                                android:drawableLeft="@drawable/ic_user"
                                android:drawablePadding="8dp"
...
                            app:layout_constraintTop_toBottomOf="@+id/user_name_layout"
                            app:passwordToggleContentDescription="Password"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/colorAccent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/user_password"
                                android:layout_width="match_parent"
                                android:layout_height="48dp"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="24dp"
                                android:drawableStart="@drawable/ic_password"
                                android:drawablePadding="8dp"
...
                            android:layout_marginEnd="16dp"
                            app:layout_constraintBottom_toTopOf="@id/forgotten_pwd"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/user_password_layout" >
                            <Button
                                android:id="@+id/login_btn"
                                android:layout_width="match_parent"
                                android:layout_height="64dp"

                                android:backgroundTint="@color/colorAccent"
                                android:text="@string/connecter_bn"
                                android:theme="@style/Widget.MaterialComponents.Button"
...
