...

                    </ImageView>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/parkings_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="52dp">

            </androidx.recyclerview.widget.RecyclerView>
            <include
...



       <!-- <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_centerInParent="true"
            />-->

        <com.facebook.shimmer.ShimmerFrameLayout

            android:layout_width="match_parent"
...
